<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" 
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>sur.softsurena</groupId>
    <artifactId>SistemaFacturacion</artifactId>
    <version>2.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <parent>
        <groupId>sur.softsurena</groupId>
        <artifactId>sistemasPom</artifactId>
        <version>1.0-SNAPSHOT</version>
        <relativePath>../../sistemasPom/pom.xml</relativePath>
    </parent>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <archive>
                        <index>true</index>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>sur.softsurena.formularios.frmLogin</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.5.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>sur.softsurena.formularios.frmLogin</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>11</maven.compiler.release>
<!--        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>-->
    </properties>
    <name>SistemaFacturacion</name>
    <dependencies>
        <dependency>
            <groupId>sur.softsurena</groupId>
            <artifactId>imagenes</artifactId>
            <version>2</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>sur.softsurena</groupId>
            <artifactId>entidades</artifactId>
            <version>2</version>
            <type>jar</type>
        </dependency>
        
    </dependencies>
    <!--repositories>
        <repository>
            <id>pentaho-releases</id>
            <url>http://repository.pentaho.org/artifactory/repo/</url>
        </repository>
    </repositories-->
    
<!--    <repositories>
        <repository>
            <id>pentaho-releases</id>
            <url>file:///home/jhironsel/.m2/repository</url>
        </repository>
    </repositories>-->
    
    
</project>
